--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
     <script src="home.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
 </head>
 <body>
     <!-- Navbar -->
@@ -34,10 +41,10 @@
         </div>
         
         <!--Search TextArea-->
-        <div class="form-group">
+        <div class="form-group d-flex justify-content-center">
             <div class="d-flex justify-content-center">
                 <form th:action="@{/process-form}" method="post">
-                    <input class="form-control w-75 m-3 single-line-input" id="exampleFormControlTextarea1" type="text" name="content">
+                    <input class="form-control w-75 m-3 single-line-input" id="exampleFormControlTextarea1" type="text" name="content" placeholder="Gato laranja">
                     <button type="submit" class="btn btn-sm btn-dark" id="bottom">Gerar Imagem</button>
                 </form>
             </div>
@@ -47,19 +54,12 @@
 
     </div>
 
-    <!-- Banner -->
-    <div id="carousel" class="carousel slide mb-5 " data-ride="carousel">
-        <div>
-            <img th:attr="src=@{${imageUrl}}" alt="Updated Image">
-        </div>
+    <div class="d-flex justify-content-center">
+            <img th:src="${imageUrl ?: 'images/cat.jpg'}">
     </div>
+    
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <!-- Latest compiled and minified JavaScript -->
+    
 
 </body>
 </html>
